Wed Apr 17 19:37:49 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): added missing test for gsl_rng_mt19937_1998

	* gsl_rng.h: added missing declaration for gsl_rng_mt19937_1998

Sun Dec  2 15:45:24 2001  Brian Gough  <bjg@network-theory.co.uk>

	* Added new generators borosh13, coveyou, fishman18, fishman20,
 	fishman2x, knuthran, knuthran2, lecuyer21, waterman14 from Knuth's
 	Seminumerical Algorithms 3rd Ed.  Implemented by Carlo Perassi.

	* gfsr4.c (gfsr4_get_double): increased divisor for double to
 	2^32, avoids generating exact result of 1.0 as specified in the
 	documentation

Mon Sep  3 10:32:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* mt.c (mt_1998_set): renamed macro to avoid duplicate definition

Fri Aug 31 17:49:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* mt.c (mt_1998_set): added the original (buggy) MT19937 seeding
 	routine as mt19937_1998 for compatibility.

Wed May  2 15:35:38 2001  Brian Gough  <bjg@network-theory.co.uk>

	* ran1.c (ran1_get_double): use float constants for comparison
	for compatibility with original Numerical Recipes routines

	* ran2.c (ran2_get_double): ditto
	
Fri Apr 27 18:47:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* types.c (gsl_rng_types_setup): added void to make prototype
 	valid in ansi c

Mon Apr 16 20:03:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* default.c (gsl_rng_env_setup): removed spurious argument to
 	fprintf

Tue Jan 23 13:24:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* types.c (gsl_rng_types_setup): provide a function that returns a
 	list of all the generator types

	* default.c (gsl_rng_env_setup): get the list of generators from a
 	function rather than having a list in the code itself.  Display a
 	list of the valid generators if the user provides an incorrect one.

Fri Dec  8 20:30:58 2000  Brian Gough  <bjg@network-theory.co.uk>

	* ranlxs.c: renamed internal function ranlxs_set_impl to
 	ranlxs_set
	